feat: add Mes statistiques champion pool with background season sync
Serve champion stats from DB with incremental catch-up sync, show sync progress in the UI, and fix incomplete-season edge cases where Riot history is exhausted before W+L totals.

Co-authored-by: Cursor <cursoragent@cursor.com>